--- a/en.html
+++ b/en.html
@@ -63,7 +63,7 @@
                     </ul>
                 </li>
             </ul>
-			
+
 			<div class="mobile-nav__lang">
                 <a href="/" class="mobile-nav__lang-item link link_yellow link_dotted">Русская версия</a>
 				<span class="mobile-nav__lang-item">English version</span>
@@ -141,7 +141,7 @@
                         <div class="curve curve_bottom curve_sm"></div>
                         <h2 class="section__title">About the system</h2>
                         <div class="text text_lg">
-                            The innovative Russian Shunting <strong> Automatic Cab Signalling system</strong> 
+                            The innovative Russian Shunting <strong> Automatic Cab Signalling system</strong>
                             <ul>
                                 <li class="enter_list_content">ensures the safety of shunting and hump operations in  mainline and industrial railway stations and yards.</li>
                                 <li class="enter_list_content">transmits route jobs and allowed speed limits, including stop commands, to engines via radio.</li>
@@ -285,14 +285,14 @@
                             <ul class="security__list p_broke">
                                 <li class="security__list-item">non-observance of signals;</li>
                                 <li class="security__list-item">violation of voice communication rules;</li>
-                                <li class="security__list-item">movement without foreman's command;</li>                                
+                                <li class="security__list-item">movement without foreman's command;</li>
                                 <li class="security__list-item">poor brake control;</li>
                                 <li class="security__list-item">poor knowledge of the station's technological instructions;</li>
                                 <li class="security__list-item">sleeping in locomotive;</li>
                                 <li class="security__list-item">poor signal visibility;</li>
                                 <li class="security__list-item">speed limit violation;</li>
                                 <li class="security__list-item">erroneous perception of adjacent track's signal as own track's signal;</li>
-                                <li class="security__list-item">foreman's command to driver containing a wrong locomotive identification number;</li>                                
+                                <li class="security__list-item">foreman's command to driver containing a wrong locomotive identification number;</li>
                                 <li class="security__list-item">damage to wagons during coupling due to shunting master's error or misperception of command by driver;</li>
                                 <li class="security__list-item">erroneous setting of movement direction.</li>
                             </ul>
@@ -477,7 +477,7 @@
                     <div class="effect__content">
                         <div class="effect__content-left">
                             <div class="effect__text effect__text_1 text text_lg">
-                            The economic effect of MALS-generated statistics analysis can be expressed in the optimization of the fleet of shunting engines operated in a station. Information on the duration of hump operations (in stations equipped with a shunting hump) can be used in the improvement of the operating procedures aimed at reducing downtime. 
+                            The economic effect of MALS-generated statistics analysis can be expressed in the optimization of the fleet of shunting engines operated in a station. Information on the duration of hump operations (in stations equipped with a shunting hump) can be used in the improvement of the operating procedures aimed at reducing downtime.
                             </div>
                             <img src="/i/effect-1-sm.png" alt="" class="effect__img hidden-lg-up">
                             <img src="/i/effect-1_en.png" alt="" class="effect__img hidden-md-down">
@@ -488,7 +488,7 @@
                         <div class="effect__content-right">
                             <img src="/i/effect-2.png" alt="" class="effect__img">
                             <div class="effect__text effect__text_3">
-                            "In railway stations equipped with Shunting Automatic Cab Signalling (MALS), before reception and dispatching of trains it is allowed not to interrupt shunting operations in the tracks, from which it is impossible to prevent the exit of rolling stock into a train route by setting switches into safety position. The locomotive performing shunting operations must have the onboard shunting automatic cab signalling in working order. The list of such railway stations is to be defined by the infrastructure owner, private railway tracks owner." (Item 1, Annex no. 9 to the Guidelines for train traffic and shunting operations in railway transportation) 
+                            "In railway stations equipped with Shunting Automatic Cab Signalling (MALS), before reception and dispatching of trains it is allowed not to interrupt shunting operations in the tracks, from which it is impossible to prevent the exit of rolling stock into a train route by setting switches into safety position. The locomotive performing shunting operations must have the onboard shunting automatic cab signalling in working order. The list of such railway stations is to be defined by the infrastructure owner, private railway tracks owner." (Item 1, Annex no. 9 to the Guidelines for train traffic and shunting operations in railway transportation)
                             </div>
                         </div>
                     </div>
@@ -501,7 +501,7 @@
                     <div class="tech__content">
                         <p>MALS provides a wide range of opportunities for application and further development of unmanned technologies of railway rolling stock control during shunting operations in stations, while completely observing traffic safety requirements.</p>
                         <p>The driver can set the speed that will be automatically implemented by the locomotive using the MALS facilities. The driver's function in this case comes down to observing the progress of operations.</p>
-                        <p>In the driverless mode all the parameters required for the performance of shunting operations are set at the station duty officer's workstation, and the locomotive automatically performs the required operation (approach to trainset, coupling with trainset, humping, detaching).</p>                        
+                        <p>In the driverless mode all the parameters required for the performance of shunting operations are set at the station duty officer's workstation, and the locomotive automatically performs the required operation (approach to trainset, coupling with trainset, humping, detaching).</p>
                         <div class="video p_hide">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/zWTHbQf3IBU" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                         </div>
@@ -522,7 +522,7 @@
                             <div class="scheme__item scheme__item_1">
                                 <h3 class="scheme__item-title">
                                     <span class="scheme__item-title-text">
-                                        GLONASS/GPS 
+                                        GLONASS/GPS
                                     </span>
                                     <div class="scheme__item-icon tooltip">
                                         <i class="tooltip__toggle icon-i"></i>
@@ -550,7 +550,7 @@
                             <div class="scheme__item scheme__item_3 scheme__item_right">
                                 <h3 class="scheme__item-title">
                                     <span class="scheme__item-title-text">
-                                        RADIO TOWER 
+                                        RADIO TOWER
                                     </span>
                                     <div class="scheme__item-icon tooltip">
                                         <i class="tooltip__toggle icon-i"></i>
@@ -564,7 +564,7 @@
                             <div class="scheme__item scheme__item_4 scheme__item_right">
                                 <h3 class="scheme__item-title scheme__item-title_sm">
                                     <span class="scheme__item-title-text">
-                                        ONBOARD RADIO STATION 
+                                        ONBOARD RADIO STATION
                                     </span>
                                     <div class="scheme__item-icon tooltip">
                                         <i class="tooltip__toggle icon-i"></i>
@@ -666,7 +666,7 @@
                                     E-mail
                                 </dt>
                                 <dd class="contacts__item-text">
-                                    <a href="mailto:info@mals.su">info@mals.su</a>
+                                    <a href="mailto:g.zuev@vniias.ru">g.zuev@vniias.ru</a>
                                 </dd>
                             </dl>
                         </div>
